c-n-d-e-dashboard/base/cnde-rest-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-api
  labels:
    control-plane: saas-api
    role: backend
spec:
  selector:
    matchLabels:
      control-plane: saas-api
      role: backend
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: saas-api
        role: backend
    spec:
      containers:
        - image: controller:latest
          name: saas-api
          imagePullPolicy: Always
      terminationGracePeriodSeconds: 10
